# irodori-table

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  deny.toml  extension.schema.json  flake.nix
.cache/tauri/: linuxdeploy-plugin-gtk.sh
.cargo/: config.toml
.codex/agents/: irodori-explorer.toml  irodori-reviewer.toml  irodori-workstream-coordinator.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: backlog-ticket.yml  bug.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  codeql.yml  docs-check.yml  extension-catalog-sync.yml  knowledge-refresh.yml  pages.yml  release-dry-run.yml  release.yml  scorecard.yml  security.yml  warm-release-cache.yml
apps/desktop/: .gitignore  .oxfmtrc.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: command_registry.rs  crash_report.rs  db.rs  git.rs  indexing.rs  jobs.rs  lib.rs  security.rs
apps/desktop/src-tauri/src/ai/: chat.rs  mod.rs
apps/desktop/src-tauri/src/db/: bigquery.rs  bigtable.rs  cassandra.rs  clickhouse.rs  commands.rs  connection.rs  duck.rs  edit.rs  engine.rs  error.rs  explain.rs  gcp_auth.rs  git-error-1782243705153  influx.rs  meta.rs  metadata_manager.rs  metadata_types.rs  migration.rs  mod.rs  mongo.rs  mssql.rs  mysql.rs  neo4j.rs  oracle.rs  postgres.rs  profile.rs  query.rs  query_executor.rs  redis.rs  result_spill_manager.rs  runner.rs  snowflake.rs  spill.rs  sqlite.rs  state.rs  stream.rs  tests.rs  transport.rs
apps/desktop/src-tauri/src/db/explain/: mod.rs  model.rs  mysql.rs  postgres.rs  render.rs  sqlite.rs  static_analysis.rs  tests.rs
apps/desktop/src-tauri/src/extensions/: abi.rs  connection.rs  mod.rs  store.rs
apps/desktop/src-tauri/src/git/: mod.rs  parser.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/indexing/: mod.rs
apps/desktop/src-tauri/src/jobs/: mod.rs
apps/desktop/src-tauri/src/pty/: mod.rs
apps/desktop/src-tauri/src/security/: mod.rs
apps/desktop/src-tauri/tests/: integration_db.rs  native_extension_host.rs
apps/web/: compose.endpoint.host.yaml  compose.endpoint.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/irodori-completion/: Cargo.toml
crates/irodori-connection/: Cargo.toml
crates/irodori-connection/src/: lib.rs  portable.rs  tests.rs
crates/irodori-core/: Cargo.toml
crates/irodori-core/src/: batch.rs  connection.rs  jobs.rs  lib.rs
crates/irodori-core/src/connection/: portable.rs  tests.rs
crates/irodori-core/src/jobs/: runtime.rs  tests.rs
crates/irodori-data-sources/: Cargo.toml
crates/irodori-error/: Cargo.toml
crates/irodori-error/src/: lib.rs
crates/irodori-extension/: Cargo.toml
crates/irodori-extension/src/: lib.rs
crates/irodori-generate/: Cargo.toml
crates/irodori-generate/src/: chat.rs  command.rs  http.rs  lib.rs  llama.rs  plan.rs  project.rs  runtime.rs  schema.rs  verify.rs
crates/irodori-generate/tests/: golden.rs
crates/irodori-i18n/: Cargo.toml
crates/irodori-io/: Cargo.toml
crates/irodori-io/src/: export.rs  lib.rs  tabular.rs
crates/irodori-io/src/tabular/: import.rs  tests.rs
crates/irodori-jobs/: Cargo.toml
crates/irodori-jobs/src/: batch.rs  jobs.rs  lib.rs
crates/irodori-jobs/src/jobs/: runtime.rs  tests.rs
crates/irodori-knowledge/: Cargo.toml  schema.sql
crates/irodori-knowledge/src/: index.rs  lib.rs  model.rs  row.rs  store.rs
crates/irodori-knowledge/src/index/: build.rs  mod.rs  tests.rs
crates/irodori-proxy/: Cargo.toml
crates/irodori-proxy/src/: diagnostics.rs  forwarder.rs  lib.rs  plan.rs  protocol.rs  resolved.rs  tests.rs
crates/irodori-secure-store/: Cargo.toml
crates/irodori-security/: Cargo.toml
crates/irodori-server/: Cargo.toml
crates/irodori-server/src/: audit.rs  auth.rs  guard.rs  lib.rs  main.rs  model.rs  server.rs  source.rs
crates/irodori-sql/: Cargo.toml
docs/: README.ja.md  README.md  agent-coordination.md  agent-workstreams.json  ai-chat.md  ai-local-sql-generation.md  cheatsheet-autodoc-plan.md  clean-room.md  completion-and-ai-strategy.md  connections.md  data-source-content-audit.md  data-source-coverage-strategy.md  data-source-support-status.md  data-verification-diff.md  db-client-market-scan-2026-06-21.md  db-feature-samples.md  development-security.md  disclaimer.md  distribution.md  engine-syntax-reference.md  erd.md  extension-development.md  extensions.md  external-db-contract-and-verification.md  feature-matrix.md  git.md  headless-data-api.md  i18n.md  implementation-architecture.md  implementation-backlog.md  implementation-progress.md  import.md  integrated-terminal.md  keyboard-shortcuts.md  knowledge-base.md  knowledge.md  lakehouse.md  licensing.md  linux-development.md  maintainability-audit.md  (+26 more)
docs/adr/: 0001-editor-stack.md
docs/cheatsheets/: README.md  neo4j.md  postgres.md  questdb.md
docs/extension-marketplace/: catalog.json  connector-repositories.json  index.json
docs/site/: blog.html  disclaimer.html  docs.html  index.html  privacy.html  search-data.js  search.js  styles.css  support.html
knowledge/: engines.json  pack-facts.json  sources.json
knowledge/cheatsheets/: postgres.json
packaging/appstream/: dev.irodori.table.metainfo.xml.template
registry/: README.ja.md  README.md  agent-workstreams.json  data-source-support-status.md  knowledge-pack.json  knowledge-refresh-report.md  repository-boundaries.md
samples/: README.md  compose.yaml  db-feature-samples.json
scripts/: cargo-deny.sh  check-licenses.sh  dependency-review.mjs  dev-db.sh  run-desktop-dev.sh  rust-clippy.sh  security-check.sh  verify-db.sh
site/: README.md  blog.html  docs.html  index.html  search-data.js  search.js  styles.css
(+591 files in other folders)
