[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/irodori-connection",
    "crates/irodori-security",
    "crates/irodori-core",
    "crates/irodori-proxy",
    "crates/irodori-secure-store",
    "crates/irodori-completion",
    "crates/irodori-generate",
    "crates/irodori-extension",
    "crates/irodori-io",
    "crates/irodori-server",
]
default-members = [
    "crates/irodori-connection",
    "crates/irodori-security",
    "crates/irodori-core",
    "crates/irodori-proxy",
    "crates/irodori-secure-store",
    "crates/irodori-completion",
    "crates/irodori-generate",
    "crates/irodori-extension",
    "crates/irodori-io",
    "crates/irodori-server",
]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "MIT OR 0BSD"
authors = ["Irodori Table contributors"]

[workspace.dependencies]
irodori-sql = { git = "https://github.com/hjosugi/irodori-sql", tag = "v0.2.24" }
irodori-error = { git = "https://github.com/hjosugi/irodori-knowledge", tag = "v0.2.23" }
irodori-jobs = { git = "https://github.com/hjosugi/irodori-knowledge", tag = "v0.2.23" }
irodori-knowledge = { git = "https://github.com/hjosugi/irodori-knowledge", tag = "v0.2.23" }
