[package]
name = "irodori-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
irodori-connection = { path = "../irodori-connection" }
irodori-error = { workspace = true }
irodori-jobs = { workspace = true }
irodori-security = { path = "../irodori-security" }
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
