[package]
name = "irodori-extension"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }

[dev-dependencies]
typeship = "0.1.1"
typeship-ts-rs = "0.1.1"
