[package]
name = "irodori-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local, grammar-constrained SQL generation (schema projection, planning, validation) for Irodori Table."

[dependencies]
irodori-sql = { workspace = true }
irodori-error = { workspace = true }
# Embedded llama.cpp (CPU). Optional + pinned: the build compiles llama.cpp via
# cmake, so it stays behind the `llama` feature (mirrors the desktop `duckdb`
# feature). Pinned to the API this crate was written against.
llama-cpp-2 = { version = "=0.1.150", optional = true }

[features]
default = []
llama = ["dep:llama-cpp-2"]
