[package]
name = "irodori-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local, grammar-constrained SQL generation (schema projection, planning, validation) for Irodori Table."

[dependencies]
irodori-sql = { workspace = true }
irodori-error = { workspace = true }
# Embedded llama.cpp (CPU). Optional + pinned: the build compiles llama.cpp via
# cmake, so it stays behind the `llama` feature (mirrors the desktop `duckdb`
# feature). Pinned to the API this crate was written against.
llama-cpp-2 = { version = "=0.1.150", optional = true }
# HTTP providers (Ollama / OpenAI-compatible APIs). Blocking client fits the
# synchronous GrammarModel; behind the `http` feature so the base crate stays
# dependency-light.
reqwest = { version = "0.13.4", features = ["blocking", "json"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
# Embedded local model (grammar-constrained).
llama = ["dep:llama-cpp-2"]
# Ollama + OpenAI-compatible HTTP providers.
http = ["dep:reqwest", "dep:serde_json"]
# The CLI/command provider (Claude Code, Codex, Copilot, any tool) is std-only
# and always available — no feature needed.
