[package]
name = "irodori-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
irodori-core = { path = "../irodori-core" }
irodori-sql = { path = "../irodori-sql" }
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
arrow = { version = "59.0.0", optional = true }
parquet = { version = "59.0.0", optional = true }
apache-avro = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
parquet = ["dep:parquet", "dep:arrow"]
avro = ["dep:apache-avro"]
