[package]
name = "irodori-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
irodori-error = { path = "../irodori-error" }
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
