[package]
name = "irodori-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
