[package]
name = "irodori-knowledge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
irodori-error = { path = "../irodori-error" }
irodori-jobs = { path = "../irodori-jobs" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
