[package]
name = "irodori-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
irodori-core = { path = "../irodori-core" }
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt", "macros"] }
tokio-util = { version = "0.7" }

