[package]
name = "irodori-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "irodori-server"
path = "src/main.rs"

[dependencies]
irodori-core = { path = "../irodori-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Synchronous SQLite for the built-in source, driven from `spawn_blocking`. (sqlx's
# async SQLite needs `'static` SQL for its Send worker future, which fights the
# async-trait boxing here; rusqlite owns the statement and sidesteps that.)
rusqlite = { version = "0.32", features = ["bundled"] }
subtle = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
