[package]
name = "irodori-table-desktop"
version = "0.2.4"
description = "Fast SQL workbench for Irodori Table"
authors = ["you"]
edition = "2021"
license = "MIT OR 0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
irodori-core = { path = "../../../crates/irodori-core" }
irodori-proxy = { path = "../../../crates/irodori-proxy" }
irodori-secure-store = { path = "../../../crates/irodori-secure-store" }
irodori-sql = { path = "../../../crates/irodori-sql" }
irodori-completion = { path = "../../../crates/irodori-completion" }
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
# Real connectivity for PostgreSQL, MySQL, and SQLite through one Any-driver path.
# No TLS feature yet (local-dev first); TLS lands with the network/security work.
# Oracle is intentionally NOT here: the plan is a pure-Rust thin TNS driver
# (no Instant Client, like A5:SQL Mk-2's direct mode) built by inheriting the
# permissive `oracle-rs` crate. See docs/data-source-coverage-strategy.md (SRC-004).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    # Type coverage: decode decimals, dates/times, uuids, and json correctly
    # instead of erroring (the `Any`-driver gap).
    "chrono",
    "uuid",
    "bigdecimal",
    "json",
] }
# Streaming result rows (bounded memory) instead of buffering everything.
futures-util = "0.3"
# Object-safe async trait for the per-engine `Connection` abstraction + registry.
async-trait = "0.1"
# MongoDB (document store) — proves the Connection trait extends beyond SQL.
mongodb = "3"
# SQL Server via the pure-Rust TDS driver (no native client needed). `chrono`
# turns on precision-safe temporal decode (datetime/datetime2/date/time/
# datetimeoffset -> chrono types); exact numerics use tiberius' built-in
# `Numeric` (no extra feature) so DECIMAL/NUMERIC/MONEY keep full precision.
tiberius = { version = "0.12", default-features = false, features = [
    "tds73",
    "rustls",
    "chrono",
] }
tokio-util = { version = "0.7", features = ["compat"] }
# DuckDB is embedded C++ (heavy bundled build) so it is feature-gated and off by
# default: build with `--features duckdb`.
duckdb = { version = "1", optional = true, features = ["bundled"] }
oracle-rs = "0.1.7"
reqwest = { version = "0.13.4", features = ["json"] }
neo4rs = "0.8.0"
tauri-plugin-dialog = "2.7.1"
redis = { version = "0.27.5", default-features = false, features = ["tokio-comp"] }
scylla = { version = "0.15" }
openssl = { version = "0.10", features = ["vendored"] }

[features]
duckdb = ["dep:duckdb"]

[dev-dependencies]
# Integration tests (tests/integration_db.rs) drive a real DB through a runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# TypeScript boundary generation. The Rust types stay the single source of truth;
# ts-rs renders them and typebridge assembles + drift-checks the module. Sibling
# project at /mnt/data/workspace/typebridge (path dep, dev-only).
typebridge = { path = "../../../../typebridge/crates/typebridge" }
typebridge-ts-rs = { path = "../../../../typebridge/crates/typebridge-ts-rs" }
