[package]
name = "irodori-table-desktop"
version = "0.3.7"
description = "Fast SQL workbench for Irodori Table"
authors = ["you"]
edition = "2021"
license = "MIT OR 0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
irodori-core = { path = "../../../crates/irodori-core" }
irodori-proxy = { path = "../../../crates/irodori-proxy" }
irodori-secure-store = { path = "../../../crates/irodori-secure-store" }
irodori-sql.workspace = true
irodori-completion = { path = "../../../crates/irodori-completion" }
# `http` (Ollama + OpenAI-compatible APIs) and the CLI provider are always on so
# external/subscription models work without the heavy embedded `llama` build.
irodori-generate = { path = "../../../crates/irodori-generate", features = ["http"] }
irodori-knowledge.workspace = true
sql-dialect-fmt-formatter = { git = "https://github.com/hjosugi/sql-dialect-fmt", tag = "v1.0.0" }
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
# Real connectivity for PostgreSQL, MySQL, and SQLite through one Any-driver path.
# No TLS feature yet (local-dev first); TLS lands with the network/security work.
# Oracle is intentionally NOT here: the plan is a pure-Rust thin TNS driver
# (no Instant Client, like A5:SQL Mk-2's direct mode) built by inheriting the
# permissive `oracle-rs` crate. See https://hjosugi.github.io/irodori-docs/data-source-coverage-strategy.html (SRC-004).
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    # Type coverage: decode decimals, dates/times, uuids, and json correctly
    # instead of erroring (the `Any`-driver gap).
    "chrono",
    "uuid",
    "bigdecimal",
    "json",
] }
# Streaming result rows (bounded memory) instead of buffering everything.
futures-util = "0.3"
# Object-safe async trait for the per-engine `Connection` abstraction + registry.
async-trait = "0.1"
# Integrated terminal: cross-platform PTY (wezterm's crate). Output is base64'd
# over a Tauri channel to preserve bytes across chunk boundaries.
portable-pty = "0.9"
base64 = "0.22"
# Optional connector implementations. Long-term these move to installable
# extensions; keeping them feature-gated here avoids compiling them in normal
# desktop builds while preserving a local escape hatch.
mongodb = { version = "3", optional = true }
# SQL Server via the pure-Rust TDS driver (no SQL Server client needed). Use
# native-tls to avoid tiberius' stale rustls 0.21 stack while keeping the
# connector feature-gated. `chrono` turns on precision-safe temporal decode
# (datetime/datetime2/date/time/datetimeoffset -> chrono types); exact numerics
# use tiberius' built-in `Numeric` (no extra feature) so DECIMAL/NUMERIC/MONEY
# keep full precision.
tiberius = { version = "0.12", optional = true, default-features = false, features = [
    "tds73",
    "native-tls",
    "chrono",
] }
tokio-util = { version = "0.7", features = ["compat"] }
# DuckDB is embedded C++ (heavy bundled build) so it is feature-gated and off by
# default: build with `--features duckdb`.
duckdb = { version = "1", optional = true, features = ["bundled"] }
oracle-rs = { version = "0.1.7", optional = true }
reqwest = { version = "0.13.4", features = ["json", "stream"] }
neo4rs = { version = "0.8.0", optional = true }
tauri-plugin-dialog = "2.7.1"
redis = { version = "1.2.4", optional = true, default-features = false, features = ["tokio-comp"] }
scylla = { version = "1.7", optional = true }
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
default = []
# Connector extensions should provide DuckDB long-term. This feature remains as
# a local escape hatch while the extension host grows native-driver support.
duckdb = ["dep:duckdb"]
cassandra = ["dep:scylla"]
mongo = ["dep:mongodb"]
neo4j = ["dep:neo4rs"]
oracle = ["dep:oracle-rs"]
redis-connector = ["dep:redis"]
snowflake = []
bigquery = ["dep:openssl"]
bigtable = ["dep:openssl"]
clickhouse = []
influxdb = []
sqlserver = ["dep:tiberius", "tokio-util/compat"]
legacy-connectors = [
    "bigquery",
    "bigtable",
    "cassandra",
    "clickhouse",
    "influxdb",
    "mongo",
    "neo4j",
    "oracle",
    "redis-connector",
    "snowflake",
    "sqlserver",
]
# Embedded local SQL generation (compiles llama.cpp). Off by default so standard
# builds stay light; the `ai_generate_sql` command returns `unsupported` without it.
llama = ["irodori-generate/llama"]

[dev-dependencies]
# Integration tests (tests/integration_db.rs) drive a real DB through a runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# TypeScript boundary generation. The Rust types stay the single source of truth;
# ts-rs renders them and typeship assembles + drift-checks the module.
typeship = "0.1.2"
typeship-ts-rs = "0.1.2"
