[package]
name = "irodori-table-desktop"
version.workspace = true
description = "Fast SQL workbench for Irodori Table"
authors = ["you"]
edition = "2021"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
irodori-connection = { workspace = true }
irodori-error = { workspace = true }
irodori-jobs = { workspace = true }
irodori-proxy = { workspace = true }
irodori-security = { workspace = true }
irodori-secure-store = { workspace = true }
irodori-sql.workspace = true
irodori-completion = { workspace = true }
irodori-migration.workspace = true
# `http` (Ollama + OpenAI-compatible APIs) and the CLI provider are always on so
# external/subscription models work without the heavy embedded `llama` build.
irodori-generate = { workspace = true, features = ["http"] }
irodori-knowledge.workspace = true
sql-dialect-fmt-formatter = { git = "https://github.com/hjosugi/sql-dialect-fmt", tag = "v1.16.1" }
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
# Real connectivity for PostgreSQL, MySQL, and SQLite through one Any-driver path.
# No TLS feature yet (local-dev first); TLS lands with the network/security work.
# Oracle is intentionally NOT here: the plan is a pure-Rust thin TNS driver
# (no Instant Client, like A5:SQL Mk-2's direct mode) built by inheriting the
# permissive `oracle-rs` crate. See https://hjosugi.github.io/irodori-docs/data-source-coverage-strategy.html (SRC-004).
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    # Type coverage: decode decimals, dates/times, uuids, and json correctly
    # instead of erroring (the `Any`-driver gap).
    "chrono",
    "uuid",
    "bigdecimal",
    "json",
] }
# Streaming result rows (bounded memory) instead of buffering everything.
futures-util = "0.3"
# Object-safe async trait for the per-engine `Connection` abstraction + registry.
async-trait = "0.1"
# Integrated terminal: cross-platform PTY (wezterm's crate). Output is base64'd
# over a Tauri channel to preserve bytes across chunk boundaries.
portable-pty = "0.9"
base64 = "0.22"
# Optional connector implementations. Long-term these move to installable
# extensions; keeping them feature-gated here avoids compiling them in normal
# desktop builds while preserving a local escape hatch.
mongodb = { version = "3", optional = true }
# SQL Server via the pure-Rust TDS driver (no SQL Server client needed). Use
# native-tls to avoid tiberius' stale rustls 0.21 stack while keeping the
# connector feature-gated. `chrono` turns on precision-safe temporal decode
# (datetime/datetime2/date/time/datetimeoffset -> chrono types); exact numerics
# use tiberius' built-in `Numeric` (no extra feature) so DECIMAL/NUMERIC/MONEY
# keep full precision.
tiberius = { version = "0.12", optional = true, default-features = false, features = [
    "tds73",
    "native-tls",
    "chrono",
] }
tokio-util = { version = "0.7", features = ["compat"] }
oracle-rs = { version = "0.1.7", optional = true }
# default-features would pull aws-lc-rs, a second C crypto stack alongside the
# ring that tauri-plugin-updater already requires. charset/http2/system-proxy
# are reqwest defaults re-listed on purpose — losing system-proxy would break
# users behind a corporate proxy.
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "stream",
    "rustls-no-provider",
    "charset",
    "http2",
    "system-proxy",
] }
# With no provider compiled into reqwest, its default_rustls_crypto_provider()
# is a literal panic!. lib.rs installs this one before anything builds a client.
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
# Native connector-extension host: dynamic loading of installed connector
# cdylibs plus download integrity + archive unpacking for the install pipeline.
libloading = "0.9"
sha2 = "0.11"
flate2 = "1"
tar = "0.4"
neo4rs = { version = "0.8.0", optional = true }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2"
redis = { version = "1.2.4", optional = true, default-features = false, features = ["tokio-comp"] }
scylla = { version = "1.7", optional = true }
openssl = { version = "0.10", optional = true, features = ["vendored"] }
tauri-plugin-updater = "^2"

[features]
default = []
# The updater requires a signed-release config containing its public key.
# Keep it out of unsigned/lightweight builds so a missing plugin config cannot
# abort application startup before the main window is created.
updater = []
cassandra = ["dep:scylla"]
mongo = ["dep:mongodb"]
neo4j = ["dep:neo4rs"]
oracle = ["dep:oracle-rs"]
redis-connector = ["dep:redis"]
snowflake = []
bigquery = ["dep:openssl"]
bigtable = ["dep:openssl"]
clickhouse = []
influxdb = []
sqlserver = ["dep:tiberius", "tokio-util/compat"]
legacy-connectors = [
    "bigquery",
    "bigtable",
    "cassandra",
    "clickhouse",
    "influxdb",
    "mongo",
    "neo4j",
    "oracle",
    "redis-connector",
    "snowflake",
    "sqlserver",
]
# Embedded local SQL generation (compiles llama.cpp). Off by default so standard
# builds stay light; the `ai_generate_sql` command returns `unsupported` without it.
llama = ["irodori-generate/llama"]

[dev-dependencies]
# Integration tests (tests/integration_db.rs) drive a real DB through a runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# TypeScript boundary generation. The Rust types stay the single source of truth;
# ts-rs renders them and typeship assembles + drift-checks the module.
typeship = "0.2.0"
typeship-ts-rs = "0.2.0"
